Targetting 2.6 to 3.4 after all.
Not everyone uses tox. Targetting from Python 2.6. My usual targets.

Simple appveyor.yml for future tests against the real API.

Mostly untested appveyor_artifacts.py code. Added todo list in
docstring.

Using requests instead of urllib mess with 2.6 vs 3.4.

Testing setup_logging().

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: python
 sudo: false
 
 install:
-  - pip install codecov tox
+  - pip install coveralls tox
 
 script:
-  - tox
+  - tox -e lint,py34,py33,pypy3,pypy,py27,py26
 
 after_success:
   - coveralls
