--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint,py34
+envlist = lint,py{34,27,26}
 
 [testenv]
 commands =
@@ -41,8 +41,8 @@ max-line-length = 120
 reports = no
 ignore = .tox/*,build/*,docs/*,env/*,get-pip.py
 disable =
-    locally-disabled,
+    import-error,
     no-init,
     no-name-in-module,
+    no-value-for-parameter,
     too-few-public-methods,
-    too-many-instance-attributes,
