--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,18 @@ language: python
 
 sudo: false
 
+addons:
+  apt:
+    sources:
+      - deadsnakes
+    packages:
+      - python3.5
+
 install:
   - pip install coveralls tox
 
 script:
-  - tox -e lint,py34,py33,pypy3,pypy,py27,py26
+  - tox -e lint,py35,py34,py33,pypy3,pypy,py27,py26
 
 after_success:
   - coveralls
