Split up get_job_ids().
Getting build version in a seperate function. Better handling of
non-starting builds. Also better handling of job statuses (instead of
overall build status).

Enabling XML coverage for PyCharm.

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,8 @@ envlist = lint,py{34,27,26}
 
 [testenv]
 commands =
-    py.test --cov-append --cov-report term-missing --cov appveyor_artifacts --cov-config tox.ini {posargs:tests}
+    py.test --cov-append --cov-report term-missing --cov-report xml --cov appveyor_artifacts --cov-config tox.ini \
+        {posargs:tests}
 deps =
     -r{toxworkdir}/requirements.txt
 usedevelop = True
