--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,8 @@ disable =
     no-name-in-module,
     no-value-for-parameter,
     too-few-public-methods,
+    too-many-branches,
+    too-many-locals,
 
 [run]
 branch = True
