Added download_file(). Test deps moved to tox.
Implemented and tested download_file() function, which writes to stderr
directly instead of through Python logging (for the dots).

Moved test dependencies out of setup.py and into tox. I think this is
the "right" way to use tox. Ran into trouble if I had to have different
packages for py26.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,9 @@ commands =
     py.test --cov-append --cov-report term-missing --cov-report xml --cov appveyor_artifacts --cov-config tox.ini \
         {posargs:tests}
 deps =
-    -r{toxworkdir}/requirements.txt
+    pytest-catchlog
+    pytest-cov
+    pytest-httpretty
 usedevelop = True
 
 [testenv:lint]
@@ -15,7 +17,6 @@ commands =
     python setup.py check --strict
     python setup.py check --strict -m
     python setup.py check --strict -s
-    python setup.py requirements -o {toxworkdir}/requirements.txt
     flake8
     pylint --rcfile=tox.ini setup.py appveyor_artifacts
 deps =
@@ -43,8 +44,6 @@ reports = no
 ignore = .tox/*,build/*,docs/*,env/*,get-pip.py
 disable =
     import-error,
-    no-init,
-    no-name-in-module,
     no-value-for-parameter,
     too-few-public-methods,
 
