--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,13 @@ deps =
     pytest-catchlog
     pytest-cov
     pytest-httpretty
+passenv =
+    CI
+    TRAVIS
+    TRAVIS_COMMIT
+    TRAVIS_PULL_REQUEST
+    TRAVIS_REPO_SLUG
+    TRAVIS_TAG
 usedevelop = True
 
 [testenv:lint]
