--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,11 @@ passenv =
     TRAVIS_TAG
 usedevelop = True
 
+[testenv:py26]
+deps =
+    {[testenv]deps}
+    subprocess32
+
 [testenv:lint]
 commands =
     coverage erase
