AppVeyor example, better tox.ini.

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     pytest-catchlog
     pytest-cov
     pytest-httpretty
+    py26: subprocess32
 passenv =
     CI
     TRAVIS
@@ -17,11 +18,6 @@ passenv =
     TRAVIS_REPO_SLUG
     TRAVIS_TAG
 usedevelop = True
-
-[testenv:py26]
-deps =
-    {[testenv]deps}
-    subprocess32
 
 [testenv:lint]
 commands =
