Docstrings in tests, dropping py26 support.
Dropping Python 2.6 support since pytest-catchlog doesn't support it.
It's too old anyway, I'm gonna start dropping support on all my
projects. No code change has been made so this will continue to work on
2.6 for now.

New PyCharm has warnings for missing func arg documentation. Adding to
test functions.

Fixing pytest warnigns by switching over to pytest-catchlog .records
property.

Latest flake8-pep257 fixed pep257==0.7.0 incompatibility bug.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - pip install coveralls tox
 
 script:
-  - tox -e lint,py35,py34,py33,pypy3,pypy,py27,py26
+  - tox -e lint,py35,py34,py33,pypy3,pypy,py27
 
 after_success:
   - coveralls
