--- a/tox.ini
+++ b/tox.ini
@@ -50,6 +50,7 @@ ignore = .tox/*,build/*,docs/*,env/*,get-pip.py
 disable =
     no-value-for-parameter,
     too-few-public-methods,
+    too-many-arguments,
 
 [run]
 branch = True
