--- a/tox.ini
+++ b/tox.ini
@@ -28,12 +28,12 @@ commands =
     flake8
     pylint --rcfile=tox.ini setup.py appveyor_artifacts
 deps =
-    coverage
-    flake8
+    coverage==4.0.3
+    flake8==2.5.4
     flake8-import-order==0.5
-    flake8-pep257
-    pep8-naming
-    pylint
+    flake8-pep257==1.0.5
+    pep8-naming==0.3.3
+    pylint==1.5.4
 
 [flake8]
 application-import-names = appveyor_artifacts,tests
