--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,21 @@
+[general]
+author = @Robpol86
+license = MIT
+name = appveyor_artifacts
+version = 1.0.1
+
 [tox]
 envlist = lint,py{34,27}
 
 [testenv]
 commands =
-    py.test --cov-append --cov-report term-missing --cov-report xml --cov appveyor_artifacts --cov-config tox.ini \
+    py.test --cov-append --cov-report term-missing --cov-report xml --cov {[general]name} --cov-config tox.ini \
         {posargs:tests}
 deps =
-    pytest-catchlog
-    pytest-cov
-    pytest-httpretty
-    py26: subprocess32
+    pytest-catchlog==1.2.2
+    pytest-cov==2.2.1
+    pytest-httpretty==0.2.0
+    py26: subprocess32==3.2.7
 passenv =
     CI
     TRAVIS
@@ -25,8 +31,15 @@ commands =
     python setup.py check --strict
     python setup.py check --strict -m
     python setup.py check --strict -s
-    flake8
-    pylint --rcfile=tox.ini setup.py appveyor_artifacts
+    flake8 --application-import-names={[general]name},tests
+    pylint --rcfile=tox.ini setup.py {[general]name}
+    python -c "assert '{[general]author}' == __import__('{[general]name}').__author__"
+    python -c "assert '{[general]license}' == __import__('{[general]name}').__license__"
+    python -c "assert '{[general]version}' == __import__('{[general]name}').__version__"
+    python -c "assert 'author=\'{[general]author}\'' in open('setup.py').read(102400)"
+    python -c "assert 'license=\'{[general]license}\'' in open('setup.py').read(102400)"
+    python -c "assert 'version=\'{[general]version}\'' in open('setup.py').read(102400)"
+    python -c "assert '\n{[general]version} - ' in open('README.rst').read(102400)"
 deps =
     coverage==4.0.3
     flake8==2.5.4
@@ -36,7 +49,6 @@ deps =
     pylint==1.5.4
 
 [flake8]
-application-import-names = appveyor_artifacts,tests
 exclude = .tox/*,build/*,docs/*,env/*,get-pip.py
 ignore = D203
 import-order-style = google
@@ -44,9 +56,9 @@ max-line-length = 120
 statistics = True
 
 [pylint]
+ignore = .tox/*,build/*,docs/*,env/*,get-pip.py
 max-line-length = 120
 reports = no
-ignore = .tox/*,build/*,docs/*,env/*,get-pip.py
 disable =
     no-value-for-parameter,
     too-few-public-methods,
