Fix path mangling for coverage >= 4.3.0
Since version 4.3.0 the spaces in the .coverage files have been removed.
Path mangling would then fail, making the coveralls upload fail too,
as the paths were not properly updated.

The related commit in the coverage project is:
"Omit needless whitespace in json-based data files"
477346880dcf298556c8fb9bf3a42cd39b58cbcf

Here is an example of the change in the .coverage file:
OLD: “C:\\projects\\projectname\\file1.py": [],"C:\\projects\\projectname\\file2.py": [64,67]
NEW: "C:\\projects\\projectname\\file1.py":[],"C:\\projects\\projectname\\file2.py":[64,67]

The tests have been adapted for the new file format.

pypy3.3-5.2-alpha1 is used as Travis is now using pypy3, which
is broken with pip - setuptools.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ name = appveyor_artifacts
 version = 1.0.2
 
 [tox]
-envlist = lint,py{34,27}
+envlist = lint,py{34,27},pypy3.3-5.2-alpha1
 
 [testenv]
 commands =
