--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: false
 
 # Run.
 install: pip install coveralls tox
-script: tox -e lint,py35,py34,py33,pypy3,pypy,py27
+script: tox -e lint,py35,py34,py33,pypy3.3-5.2-alpha1,pypy,py27
 after_success: coveralls
 
 # Deploy.
